--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-prometheus-client
-bleson
+bleson==0.1.8
+click==8.0.3
+Flask==2.0.2
+importlib-metadata==4.8.1
+itsdangerous==2.0.1
+Jinja2==3.0.2
+MarkupSafe==2.0.1
+prometheus-client==0.12.0
+typing-extensions==3.10.0.2
+Werkzeug==2.0.2
+zipp==3.6.0
